[package]
name = "flow_repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
rustyline = "10.0.0"
termion = "2.0.1"
flow_lang = { path = "../flow_lang" }
regex = "1.7.0"
snailquote = "0.3.1"
